--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        
+        <h1 class="title">Broken to Become</h1>
         
         <script src="animations.js" async defer></script>
     </body>
