--- a/index.html
+++ b/index.html
@@ -9,8 +9,21 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <div id="dynamic-bg"></div>
+        
+        <section id="hero">
+            <h1 id="main-title">
+                <span id="broken-letterspacing">Broken</span> to 
+                <span id="become-letterspacing">Become</span>
+            </h1>
+        </section>
 
-        <h1 id="main-title"><span id="broken-letterspacing">Broken</span> to <span id="become-letterspacing">Become</span></h1>
+        <section class="Section">Broken</section>
+        <section class="Section">Scatter</section>
+        <section class="Section">Pause</section>
+        <section class="Section">Assemble</section>
+        <section class="Section">Bind</section>
+        <section class="Section">Become</section>
 
         <script src="animations.js" async defer></script>
     </body>
