--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
+        <div id="cursor-glow"></div>
+        <div id="glass-shards"></div>
         <div id="dynamic-bg"></div>
         
         <section id="hero">
@@ -18,12 +20,35 @@
             </h1>
         </section>
 
-        <section class="Section">Broken</section>
-        <section class="Section">Scatter</section>
-        <section class="Section">Pause</section>
-        <section class="Section">Assemble</section>
-        <section class="Section">Bind</section>
-        <section class="Section">Become</section>
+        <section class="Section">
+            <a href="DARK CHAPTERS/broken.html"><span class="hover-word" id="broken-word">Broken</span></a>
+            <br>Everything begins with a break
+        </section>
+        <section class="Section">
+            <a href="DARK CHAPTERS/scatter.html"><span class="hover-word" id="scatter-word">Scatter</span></a>
+            <br>Story lives inside the shards
+        </section>
+        <section class="Section">
+            <a href="DARK CHAPTERS/pause.html"><span class="hover-word" id="pause-word">Pause</span></a>
+            <br>Space between loss and form
+        </section>
+        <section class="Section">
+            <a href="LIGHT CHAPTERS/assemble.html"><span class="hover-word" id="assemble-word">Assemble</span></a>
+            <br>Fragments learn to speak again
+        </section>
+        <section class="Section">
+            <a href="LIGHT CHAPTERS/bind.html"><span class="hover-word" id="bind-word">Bind</span></a>
+            <br>Every repair is a new connection
+        </section>
+        <section class="Section">
+            <a href="LIGHT CHAPTERS/become.html"><span class="hover-word" id="become-word">Become</span></a>
+            <br>What remains is what matters
+        </section>
+
+
+        <section class="Footer">
+            <a href="about.html" id="footer-text" class="hover-word">By Joselyn Hernandez</a>
+        </section>
 
         <script src="animations.js" async defer></script>
     </body>
