--- a/DARK CHAPTERS/broken.html
+++ b/DARK CHAPTERS/broken.html
@@ -16,6 +16,8 @@
                 <span class="layer brokenlayer2">"Shards of glass can cut and wound<br>or magnify a vision. Mosaic celebrates<br>brokenness and the beauty of<br>being brought together."</span>
             </div>
         </div>
+        <div id="dynamic-bgb"></div>
+
         <section class="Footer">
             <a href="../index.html" id="footer-text" class="hover-word">Home</a>
             <a id="footer-text-current">Broken</a>
