--- a/LIGHT CHAPTERS/assemble.html
+++ b/LIGHT CHAPTERS/assemble.html
@@ -10,6 +10,8 @@
     </head>
     <body>
         <div id="cursor-glow"></div>
+        <div id="dot-shards"></div>
+        <div id="dynamic-bga"></div>
 
         <section class="Footer">
             <a href="../index.html" id="footer-text" class="hover-word">Home</a>
@@ -23,7 +25,7 @@
 
         <section id="hero">
             <h1 id="main-title">
-                <span id="assemble-letterspacing">Assemble</span>
+                <span id="assemble-letterspacing" class='soft-pulse-title'>Assemble</span>
             </h1>
         </section>
 
