--- a/LIGHT CHAPTERS/become.html
+++ b/LIGHT CHAPTERS/become.html
@@ -15,6 +15,8 @@
                 <span class="layer layer1">To work deliberately in the form<br>of the fragment can be seen as stopping<br>or appearing to stop a work closer …<br>to what Blanchot would call origin of writing,<br>the center rather than the sphere.”</span>
             </div>
         </div>
+        <div id="dot-shards"></div>
+        <div id="dynamic-bgbe"></div>
 
         <section class="Footer">
             <a href="../index.html" id="footer-text" class="hover-word">Home</a>
@@ -28,7 +30,7 @@
 
         <section id="hero">
             <h1 id="main-title">
-                <span id="become-letterspacing">Become</span>
+                <span id="become-letterspacing" class='soft-pulse-title'>Become</span>
             </h1>
         </section>
 
