--- a/LIGHT CHAPTERS/bind.html
+++ b/LIGHT CHAPTERS/bind.html
@@ -10,6 +10,8 @@
     </head>
     <body>
         <div id="cursor-glow"></div>
+        <div id="dot-shards"></div>
+        <div id="dynamic-bgbd"></div>
 
         <section class="Footer">
             <a href="../index.html" id="footer-text" class="hover-word">Home</a>
@@ -23,7 +25,7 @@
 
         <section id="hero">
             <h1 id="main-title">
-                <span id="bind-letterspacing">Bind</span>
+                <span id="bind-letterspacing" class='soft-pulse-title'>Bind</span>
             </h1>
         </section>
 
