--- a/DARK CHAPTERS/scatter.html
+++ b/DARK CHAPTERS/scatter.html
@@ -10,6 +10,7 @@
     </head>
     <body>
         <div id="cursor-glow"></div>
+        <div id="dynamic-bgs"></div>
 
         <section class="Footer">
             <a href="../index.html" id="footer-text" class="hover-word">Home</a>
